--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html,
-body {
+body,
+.content {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -7,6 +8,10 @@ body {
   font-family: "Courier New", Courier, monospace;
   background-color: #141414;
   color: #cccccc;
+}
+
+.content {
+  position: relative;
 }
 
 .navbar {
@@ -183,7 +188,7 @@ p a:hover {
   text-decoration: underline;
 }
 
-footer {
+.footer {
   text-align: center;
   padding-bottom: 20px;
 }
